<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/welcome_message"
            android:textColor="@color/Blue"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonReportMood"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/report_mood" />
            
            <Button
                android:id="@+id/buttonStatistics"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/statistics" />

            <Button
                android:id="@+id/buttonExportToPDF"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/export_to_pdf" />

            <Button
                android:id="@+id/buttonSendData"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/send_data" />
            
            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/settings" />

            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/about" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>