<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statisticsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewStat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/statistics"
            android:textColor="@color/Blue"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="80" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonAffectButtonStat"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/affect_button" />

            <Button
                android:id="@+id/buttonSPANENoPhotoStat"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/spane_no_photo" />

            <Button
                android:id="@+id/buttonSPANEWithPhotoStat"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/spane_with_photo" />

            <Button
                android:id="@+id/buttonPANASLongWithPhotoStat"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/panas_long_with_photo" />

            <Button
                android:id="@+id/buttonPANASShortNoPhotoStat"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/panas_short_no_photo" />

            <Button
                android:id="@+id/buttonPAMStat"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background1_effect"
                android:text="@string/pam" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>