<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background1"
    android:orientation="vertical"
    android:weightSum="100" >

    <ImageView
        android:id="@+id/imageAbout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="20"
        android:src="@drawable/ic_launcher" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
        <TextView
            android:id="@+id/whatIsMoodSelfAssessment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textSize="20sp"
            android:gravity="left"
            android:textColor="@color/Blue"
            android:text="@string/what_is_mood_self_assessment"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/moodSelfAssessmentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:gravity="left"
            android:textSize="17sp"
            android:text="@string/mood_self_assessment_description"
             />
        
        <TextView
            android:id="@+id/features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textSize="20sp"
            android:gravity="left"
            android:textColor="@color/Blue"
            android:text="@string/features"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/featuresDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"            
            android:gravity="left"
            android:textSize="17sp"
            android:text="@string/features_description"
             />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/ok"
        android:textColor="@color/Blue" />

</LinearLayout>